# events-feed

./: .gitignore  README.md  pyproject.toml
events_feed/: cli.py  db.py  dedupe.py  extract.py  feed.py  schema.py  scraper.py  sources.py
feeds/example-feed/: feed.yaml  prompt.md
